# hipe-ocrepair

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.toml
notebooks/: 0-HL-Characterise-Data.ipynb  1-HL-Visualise-Results.ipynb  2-HL-Merge-Batches.ipynb  3-HL-Slim-DTA.ipynb  4-HL-Validate-JSON.ipynb
ocrepair/: __init__.py  dataset.py  features.py  ocr_hf_error_classifier.py  ocr_postcorrect_hf.py  plots.py  postcorrect.py  postcorrect_comptest.py
ocrepair/modeling/: predict.py  train.py
scripts/: ocr_postcorrect_hf.py
tests/: test_data.py
