[project]
name = "hipe-ocrepair"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hipe-ocrepair-scorer",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "HIPE-OCRepair-scorer",
]

[tool.uv.sources]
hipe-ocrepair-scorer = { workspace = true, editable = true }
